// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createReview creates a pull request review 1`] = `
Array [
  Array [
    Object {
      "body": "a-body.md",
      "event": "APPROVED",
      "number": 1,
      "owner": "JasonEtco",
      "repo": "example",
    },
  ],
]
`;

exports[`createReview creates a pull request review with a number 1`] = `
Array [
  Array [
    Object {
      "body": "a-body.md",
      "event": "APPROVED",
      "number": 2,
      "owner": "JasonEtco",
      "repo": "example",
    },
  ],
]
`;

exports[`createReview creates a pull request review with pullRequest number field 1`] = `
Array [
  Array [
    Object {
      "body": "a-body.md",
      "event": "APPROVED",
      "number": 4,
      "owner": "JasonEtco",
      "repo": "example",
    },
  ],
]
`;

exports[`createReview creates a pull request review with pullRequest title field 1`] = `
Array [
  Array [
    Object {
      "body": "a-body.md",
      "event": "APPROVED",
      "number": 3,
      "owner": "JasonEtco",
      "repo": "example",
    },
  ],
]
`;

exports[`createReview uses the number when hardcoded 1`] = `
Array [
  Array [
    Object {
      "body": "a-body.md",
      "event": "APPROVED",
      "number": 1000,
      "owner": "JasonEtco",
      "repo": "example",
    },
  ],
]
`;
